End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -11,5 +11,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dbtaj49w9",
+    "ApiKey": "529357567162219",
+    "ApiSecret": "EKp8vr5R5pbQTfGI0m0T5m_ucrk"
+  }
 }
